apps/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: registry-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Private Registry"
spec:
  tls:
    - hosts:
      - registry.hubbe.club
  rules:
    - host: registry.hubbe.club
      http:
        paths:
        - path: /
          backend:
            serviceName: docker-registry
            servicePort: 5000
